frontend/k8s/mainfest/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: three-tier-app-ns
spec:
  selector:
    app: frontend-deployment
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
